sorting out scss and css files.

--- a/style-human.css
+++ b/style-human.css
@@ -579,7 +579,8 @@ a:hover, a:active {
 .screen-reader-text {
   border: 0;
   clip: rect(1px, 1px, 1px, 1px);
-  clip-path: inset(50%);
+  -webkit-clip-path: inset(50%);
+          clip-path: inset(50%);
   height: 1px;
   margin: -1px;
   overflow: hidden;
@@ -594,7 +595,8 @@ a:hover, a:active {
   border-radius: 3px;
   box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.6);
   clip: auto !important;
-  clip-path: none;
+  -webkit-clip-path: none;
+          clip-path: none;
   color: #21759b;
   display: block;
   font-size: 14px;
@@ -817,4 +819,19 @@ object {
 
 .gallery-caption {
   display: block;
+}
+
+.site-content {
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.content-area {
+  -ms-flex: 2;
+      flex: 2;
+}
+
+.site-content .widget-area {
+  -ms-flex: 1;
+      flex: 1;
 }
