--- a/sass/style.scss
+++ b/sass/style.scss
@@ -104,3 +104,6 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 # Media
 --------------------------------------------------------------*/
 @import "media/media";
+
+@import "layout/flex";
+
