initial font declarations

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,7 +3,7 @@ Theme Name: Sassy Underscores
 Theme URI: http://underscores.me/
 Author: Thomas Dodson
 Author URI: http://techneblog.com
-Description: Sassy Underscores-based theme
+Description: Theme for a responsive, typography-focused writer's site.
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
