basic type scale with headers; major third progression.

--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -8,6 +8,20 @@ textarea {
 	font-family: $font_serif;
 	@include font-size(1);
 	line-height: $font__line-height-body;
+	font-variant-numeric: oldstyle-nums;
+	
+	// Rules that apply to phones and everything larger require no queries.
+
+
+	// Tablets and larger
+	@media (min-width: 768px) {
+	
+	}
+
+	// Desktops and larger 
+	@media (min-width: 992px) { 
+
+	}
 }
 
 @import "headings";
