--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -1,3 +1,6 @@
+$baseRed: #873131;
+$opac_black: rgba(0,0,0,0.8);
+
 $color__background-body: #fff;
 $color__background-screen: #f1f1f1;
 $color__background-hr: #ccc;
@@ -8,7 +11,7 @@ $color__background-ins: #fff9c0;
 $color__text-screen: #21759b;
 $color__text-input: #666;
 $color__text-input-focus: #111;
-$color__link: royalblue;
+$color__link: $baseRed;
 $color__link-visited: purple;
 $color__link-hover: midnightblue;
 $color__text-main: #404040;
