created single global layout sass partial, registered it with the site.scss file, added 1em padding to .site-content area

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -108,5 +108,5 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 --------------------------------------------------------------*/
 @import "media/media";
 
-@import "layout/flex";
+/* @import "layout/flex"; */
 
