--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -1,9 +1,7 @@
-// @import "../layout/content-sidebar";
-// @import "../layout/sidebar-content";
 /*--------------------------------------------------------------
-## Posts and pages
+## Global layouts
 --------------------------------------------------------------*/
-@import "primary/posts-and-pages";
+@import "../layout/global";
 
 /*--------------------------------------------------------------
 ## Comments
