--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -14,7 +14,7 @@ textarea {
 
 
 	// Tablets and larger
-	@media (min-width: 768px) {
+	@media (min-width: $query_small) {
 		@include font-size(1);
 	}
 
