--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -4,6 +4,11 @@
 @import "../layout/global";
 
 /*--------------------------------------------------------------
+## Header
+--------------------------------------------------------------*/
+@import "header/header";
+
+/*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
 @import "primary/comments";
