--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -684,8 +684,6 @@ a:hover, a:active {
 .entry-content:after,
 .comment-content:before,
 .comment-content:after,
-.site-header:before,
-.site-header:after,
 .site-content:before,
 .site-content:after,
 .site-footer:before,
@@ -698,7 +696,6 @@ a:hover, a:active {
 .clear:after,
 .entry-content:after,
 .comment-content:after,
-.site-header:after,
 .site-content:after,
 .site-footer:after {
   clear: both;
@@ -774,6 +771,7 @@ a:hover, a:active {
 
   .site-branding {
     width: 35%;
+    flex: 1 0 auto;
   }
 
   .site-navigation {
