--- a/style-human.css
+++ b/style-human.css
@@ -681,10 +681,6 @@ a:hover, a:active {
   }
 }
 
-.site-branding {
-  min-height: 65px;
-}
-
 .site-title {
   margin: 0;
   padding: 0;
@@ -707,27 +703,43 @@ a:hover, a:active {
   font-weight: 100;
 }
 
-@media screen and (min-width: 992px) {
-  .site-header {
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-pack: justify;
-        justify-content: space-between;
-  }
-
-  .site-branding {
-    width: 35%;
-    -ms-flex: 1 0 auto;
-        flex: 1 0 auto;
-  }
-
-  .site-navigation {
-    width: 55%;
-  }
-}
 /*
 Header Menu
 */
+.main-navigation li {
+  font-size: 1em;
+  list-style: none;
+  line-height: 1.5;
+}
+.main-navigation li a {
+  color: #FFF;
+  text-decoration: none;
+}
+
+#social-navigation ul {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-flow: wrap row;
+      flex-flow: wrap row;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+
+  nav ul {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-flow: wrap row;
+        flex-flow: wrap row;
+  }
+
+  #site-navigation ul li {
+    -ms-flex: auto;
+        flex: auto;
+  }
+}
 /*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
