--- a/sass/site/header/_header-menu.scss
+++ b/sass/site/header/_header-menu.scss
@@ -1,39 +1,69 @@
+.navigation-menus {
+	display: flex;
+}
+
 .main-navigation {
-	li {
-		font-size: 1em;
-		list-style: none;
-		line-height: 1.5;
-		a {
-			color: #FFF;
-			text-decoration: none;
+	ul {
+		padding: 0;
+		margin: 0;
+		li {
+			font-size: 1em;
+			list-style: none;
+			line-height: 1.5;
+			a {
+				color: #FFF;
+				text-decoration: none;
+			}
 		}
 	}
 } // .main-navigation class encompasses both #site-navigation and #social-navigation
 
 #site-navigation {
+	flex: 2;
+	ul {
+		li {
+			a {
+				display: flex;
+				padding: .6em 0;
+				&:hover {
+					background: hsl(0, 0%, 25%);
+				}
+			}
 
+		}
+	}
 }
 
 #social-navigation {
+	flex: 1;
+	flex-flow: wrap flow;
 	ul {
 		display: flex;
-		flex-flow: wrap row;
+		flex-flow: nowrap row;
+		justify-content: flex-end;
+		li {
+			padding-right: 1.25em;
+		} 
 	}
 }
 
 @media screen and (min-width: $query_small) {
-	.menu-toggle {
-		display: none;
-	}
-	nav ul {
-		display: flex;
-		flex-flow: wrap row;
-	}
 	#site-navigation {
 		ul {
+			max-width: 32em;
+			display: flex;
+			flex-flow: wrap row;
+			justify-content: space-between;
 			li {
-				flex: auto;
+				a {
+					padding: 0;
+				}
 			}
 		}
 	}
+	#social-navigation {
+		ul {
+			
+		}
+	}	
 }
