--- a/sass/site/header/_header-menu.scss
+++ b/sass/site/header/_header-menu.scss
@@ -24,7 +24,8 @@
 		li {
 			a {
 				display: flex;
-				padding: .6em 0;
+				max-width: 50%;
+				padding: .6em;
 				&:hover {
 					background: hsl(0, 0%, 25%);
 				}
@@ -48,22 +49,25 @@
 }
 
 @media screen and (min-width: $query_small) {
+	.main-navigation {
+		ul {
+			height: 2.688em;
+			align-items: center;
+		}
+	}
+
 	#site-navigation {
 		ul {
 			max-width: 32em;
 			display: flex;
-			flex-flow: wrap row;
+			flex-flow: nowrap row;
 			justify-content: space-between;
 			li {
 				a {
-					padding: 0;
+					max-width: none;
+					padding: .6em 1em;
 				}
 			}
-		}
-	}
-	#social-navigation {
-		ul {
-			
 		}
 	}	
 }
