--- a/sass/layout/_global.scss
+++ b/sass/layout/_global.scss
@@ -2,7 +2,7 @@
 	padding: 1em;
 }
 
-@media screen and (min-width: $query-small) {
+@media screen and (min-width: $query__small) {
 	.site-content {
 		padding: 2em;
 	}
