--- a/sass/site/header/_header.scss
+++ b/sass/site/header/_header.scss
@@ -12,7 +12,7 @@
 	background-color: $color__skin;
 
 
-	@media screen and (min-width: $query_small) {
+	@media screen and (min-width: $query__small) {
 		padding: 1em 2em;
 	}
 }
@@ -42,7 +42,7 @@
 	}
 }
 
-@media screen and (min-width: $query_medium) {
+@media screen and (min-width: $query__medium) {
 	.site-header {
 	
 	}
