--- a/sass/variables-site/_structure.scss
+++ b/sass/variables-site/_structure.scss
@@ -1,5 +1,5 @@
 $size__site-main: 100%;
 $size__site-sidebar: 25%;
 
-$query_small: 768px; // Tablets and larger
-$query_medium: 992px; // Desktops and larger
+$query__small: 768px; // Tablets and larger
+$query__medium: 992px; // Desktops and larger 
