created easier to distinguish visited links per Jakob Nielsen

--- a/sass/variables-site/_colors.scss
+++ b/sass/variables-site/_colors.scss
@@ -13,8 +13,8 @@ $color__text-input: #666;
 $color__text-input-focus: #111;
 
 $color__link: #873131;
-$color__link-visited: darken($color__link, 30%);
-$color__link-hover: lighten($color__link, 20%);
+$color__link-visited: adjust-hue($color__link, 45%);
+$color__link-hover: lighten($color__link, 10%);
 $color__text-main: #404040;
 
 $color__border-button: #ccc #ccc #bbb;
