beginning to style posts

--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -9,6 +9,11 @@
 @import "header/header";
 
 /*--------------------------------------------------------------
+## Header
+--------------------------------------------------------------*/
+@import "primary/posts-and-pages";
+
+/*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
 @import "primary/comments";
