--- a/sass/site/header/_header-menu.scss
+++ b/sass/site/header/_header-menu.scss
@@ -26,7 +26,8 @@
 				display: flex;
 				max-width: 50%;
 				padding: .6em;
-				&:hover {
+				&:hover,
+					&:focus {
 					background: hsl(0, 0%, 25%);
 				}
 			}
