story custom content type; some minor image styling.

--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -17,3 +17,8 @@
 ## Comments
 --------------------------------------------------------------*/
 @import "primary/comments";
+
+/*--------------------------------------------------------------
+## Stories
+--------------------------------------------------------------*/
+@import "primary/stories.scss";
