--- a/sass/media/_captions.scss
+++ b/sass/media/_captions.scss
@@ -1,13 +1,23 @@
 .wp-caption {
 	margin-bottom: 1.5em;
 	max-width: 100%;
+	font-family: $font-sans;
+	font-size: 90%;
 
 	img[class*="wp-image-"] {
 		@include center-block;
 	}
 
 	.wp-caption-text {
-		margin: 0.8075em 0;
+		margin: .5em 0 1.5em 1em;
+
+		@media screen and (min-width: $query__small) {
+			margin-left: 2em;
+		}
+
+		@media screen and (min-width: $query__medium) {
+			margin-left: 0;
+		}
 	}
 }
 
