--- a/sass/modules/_alignments.scss
+++ b/sass/modules/_alignments.scss
@@ -1,3 +1,13 @@
+wp-caption.aligncenter,
+.centered-image {
+	width: 100vw;
+	margin: 0 -1em;
+
+	@media screen and (min-width: $query__small) {
+		margin: 0 -2em;
+	}
+}
+
 .alignleft {
 	display: inline;
 	float: left;
