--- a/sass/typography/_copy.scss
+++ b/sass/typography/_copy.scss
@@ -7,7 +7,24 @@ dfn, cite, em, i {
 }
 
 blockquote {
-	margin: 0 1.5em;
+	position: relative;
+	margin: 0 1em;
+	padding: .25em 2.5em;
+
+	&:before {
+		position: absolute;
+		top: 0;
+		left: 0;
+		content: "\f10d";
+		font-family: FontAwesome;
+		font-size: 200%;
+		color: $color__link;
+	}
+	p {
+		&:after {
+			content: "\201D"; // code # from http://www.evotech.net/articles/testjsentities.html 
+		}
+	}
 }
 
 address {
