--- a/sass/site/primary/_stories.scss
+++ b/sass/site/primary/_stories.scss
@@ -1,3 +1,50 @@
 #story {
-	color: red;
+	display: flex;
+	justify-content: center;
+	article {
+		h1 {
+			font-size: 3.3125em;
+    		font-weight: 700;
+    		padding-bottom: 18px;
+		}
+		h2 {
+            font-size: 2.25em;
+            line-height: 150%;
+            padding-bottom: 15px;
+
+        }
+		img {
+			float: left;
+			margin-top: -30px;
+			padding-bottom: 22px;
+        	max-width: 100%;
+        	height: auto;
+		}
+		p {
+			max-width: 705px;
+			font-size: 1.357em;
+			line-height: 150%;
+            font-feature-settings: "liga" 1, "onum" 1, "smcp" 1;
+            text-indent: 1.5em;
+            margin-top: 0;
+           	margin-bottom: 0.488em;
+           	padding: 0;
+            +p.intro {
+            	text-indent: 0;
+            }
+            +p.first {
+            	text-indent: 0;
+            	margin-top: 4em;
+            }
+		}
+	}
+
+	@media screen and (min-width: $query__small) {
+		article {
+			p {
+
+			}
+		}
+		
+	}
 }
