--- a/style-human.css
+++ b/style-human.css
@@ -321,7 +321,21 @@ dfn, cite, em, i {
 }
 
 blockquote {
-  margin: 0 1.5em;
+  position: relative;
+  margin: 0 1em;
+  padding: .25em 2.5em;
+}
+blockquote:before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "\f10d";
+  font-family: FontAwesome;
+  font-size: 200%;
+  color: #873131;
+}
+blockquote p:after {
+  content: "\201D";
 }
 
 address {
@@ -364,6 +378,19 @@ big {
   font-weight: 600;
 }
 
+.dropcap {
+  float: left;
+  font-size: 400%;
+  margin-top: 20px;
+  margin-right: 3px;
+}
+
+.smallcaps {
+  font-variant: small-caps;
+  letter-spacing: 0.075em;
+  font-weight: 600;
+}
+
 /*--------------------------------------------------------------
 # Elements
 --------------------------------------------------------------*/
@@ -391,7 +418,7 @@ hr {
 }
 
 ul, ol {
-  margin: 0 0 1.5em 3em;
+  margin: 0 0 1.5em;
 }
 
 ul {
@@ -405,7 +432,7 @@ ol {
 li > ul,
 li > ol {
   margin-bottom: 0;
-  margin-left: 1.5em;
+  margin-left: .5em;
 }
 
 dt {
@@ -604,6 +631,18 @@ a:hover, a:active {
 /*--------------------------------------------------------------
 # Alignments
 --------------------------------------------------------------*/
+wp-caption.aligncenter,
+.centered-image {
+  width: 100vw;
+  margin: 0 -1em;
+}
+@media screen and (min-width: 768px) {
+  wp-caption.aligncenter,
+  .centered-image {
+    margin: 0 -2em;
+  }
+}
+
 .alignleft {
   display: inline;
   float: left;
@@ -700,7 +739,7 @@ a:hover, a:active {
   text-decoration: none;
 }
 .site-branding .site-title a:hover, .site-branding .site-title a:focus {
-  text-decoration: underline;
+  border-bottom: 5px solid #873131;
 }
 .site-branding .site-description {
   margin: 0;
@@ -821,10 +860,6 @@ Header Menu
   border-bottom: 2px solid #873131;
 }
 
-time.updated {
-  visibility: hidden;
-}
-
 .cat-links a {
   color: #404040;
   text-decoration: none;
@@ -860,6 +895,50 @@ time.updated {
 
 .bypostauthor {
   display: block;
+}
+
+/*--------------------------------------------------------------
+## Stories
+--------------------------------------------------------------*/
+#story {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+}
+#story article h1 {
+  font-size: 3.3125em;
+  font-weight: 700;
+  padding-bottom: 18px;
+}
+#story article h2 {
+  font-size: 2.25em;
+  line-height: 150%;
+  padding-bottom: 15px;
+}
+#story article img {
+  float: left;
+  margin-top: -30px;
+  padding-bottom: 22px;
+  max-width: 100%;
+  height: auto;
+}
+#story article p {
+  max-width: 705px;
+  font-size: 1.357em;
+  line-height: 150%;
+  font-feature-settings: "liga" 1, "onum" 1, "smcp" 1;
+  text-indent: 1.5em;
+  margin-top: 0;
+  margin-bottom: 0.488em;
+  padding: 0;
+}
+#story article p + p.intro {
+  text-indent: 0;
+}
+#story article p + p.first {
+  text-indent: 0;
+  margin-top: 4em;
 }
 
 /*--------------------------------------------------------------
@@ -920,6 +999,8 @@ object {
 .wp-caption {
   margin-bottom: 1.5em;
   max-width: 100%;
+  font-family: "Raleway", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
+  font-size: 90%;
 }
 .wp-caption img[class*="wp-image-"] {
   display: block;
@@ -927,7 +1008,17 @@ object {
   margin-right: auto;
 }
 .wp-caption .wp-caption-text {
-  margin: 0.8075em 0;
+  margin: .5em 0 1.5em 1em;
+}
+@media screen and (min-width: 768px) {
+  .wp-caption .wp-caption-text {
+    margin-left: 2em;
+  }
+}
+@media screen and (min-width: 992px) {
+  .wp-caption .wp-caption-text {
+    margin-left: 0;
+  }
 }
 
 .wp-caption-text {
