bringing everything up-to-date; includes story page and front page typed adjustments.

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -1,6 +1,5 @@
-.comment-navigation,
-.posts-navigation,
-.post-navigation {
+/** Content Navigation **/
+.comment-navigation, posts-navigation, post-navigation {
 
 	.site-main & {
 		margin: 0 0 1.5em;
