--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -22,3 +22,7 @@
 ## Stories
 --------------------------------------------------------------*/
 @import "primary/stories.scss";
+/*--------------------------------------------------------------
+## Footer
+--------------------------------------------------------------*/
+@import "primary/footer.scss";
