--- a/sass/site/primary/_stories.scss
+++ b/sass/site/primary/_stories.scss
@@ -16,7 +16,8 @@
 		img {
 			float: left;
 			margin-top: -30px;
-			padding-bottom: 22px;
+			padding-bottom: 1.7em;
+        	// max-width: 100vw;
         	max-width: 100%;
         	height: auto;
 		}
@@ -40,10 +41,9 @@
 	}
 
 	@media screen and (min-width: $query__small) {
-		article {
-			p {
-
-			}
+		img {
+			width: 100%;
+			padding-bottom: 1.4em;
 		}
 		
 	}
