--- a/style-human.css
+++ b/style-human.css
@@ -286,10 +286,12 @@ textarea {
 h1, h2, h3, h4, h5, h6 {
   font-family: "Raleway", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
   clear: both;
+  font-weight: 600;
 }
 
 h1 {
   font-size: 2.441em;
+  font-weight: 700;
 }
 
 h2 {
@@ -336,6 +338,7 @@ blockquote:before {
 }
 blockquote p:after {
   content: "\201D";
+  color: #873131;
 }
 
 address {
@@ -389,6 +392,12 @@ big {
   font-variant: small-caps;
   letter-spacing: 0.075em;
   font-weight: 600;
+}
+
+.citation {
+  padding-left: 1.5em;
+  text-indent: -1.5em;
+  letter-spacing: 0.05em;
 }
 
 /*--------------------------------------------------------------
@@ -566,17 +575,16 @@ a:hover, a:active {
 /*--------------------------------------------------------------
 ## Menus
 --------------------------------------------------------------*/
-.site-main .comment-navigation,
-.site-main .posts-navigation,
-.site-main .post-navigation {
+/** Content Navigation **/
+.site-main .comment-navigation, .site-main posts-navigation, .site-main post-navigation {
   margin: 0 0 1.5em;
   overflow: hidden;
 }
-.comment-navigation .nav-previous, .posts-navigation .nav-previous, .post-navigation .nav-previous {
+.comment-navigation .nav-previous, posts-navigation .nav-previous, post-navigation .nav-previous {
   float: left;
   width: 50%;
 }
-.comment-navigation .nav-next, .posts-navigation .nav-next, .post-navigation .nav-next {
+.comment-navigation .nav-next, posts-navigation .nav-next, post-navigation .nav-next {
   float: right;
   text-align: right;
   width: 50%;
@@ -696,6 +704,8 @@ wp-caption.aligncenter,
 ## Global layouts
 --------------------------------------------------------------*/
 .site-content {
+  max-width: 1080px;
+  margin: 0 auto;
   padding: 1em;
 }
 
@@ -919,7 +929,7 @@ Header Menu
 #story article img {
   float: left;
   margin-top: -30px;
-  padding-bottom: 22px;
+  padding-bottom: 1.7em;
   max-width: 100%;
   height: auto;
 }
@@ -939,6 +949,25 @@ Header Menu
 #story article p + p.first {
   text-indent: 0;
   margin-top: 4em;
+}
+@media screen and (min-width: 768px) {
+  #story img {
+    width: 100%;
+    padding-bottom: 1.4em;
+  }
+}
+
+/*--------------------------------------------------------------
+## Footer
+--------------------------------------------------------------*/
+.site-footer {
+  border-top: 1px solid #888;
+}
+.site-footer p {
+  float: right;
+  padding: 0 50px 0 0;
+  font-size: .75em;
+  color: #666;
 }
 
 /*--------------------------------------------------------------
@@ -1067,4 +1096,210 @@ object {
   display: block;
 }
 
+/** Temporary Home page adjustment **/
+.home .entry-title, .site-footer {
+  display: none;
+}
+
+.home #content {
+  padding: 0;
+  margin: 0;
+}
+
+/** Homepage Text Display with Typed.js **/
+.home .typed {
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 85%;
+  word-wrap: break-word;
+  color: #FFF;
+  position: absolute;
+  top: 59%;
+  left: 10%;
+}
+.home .typed h2 {
+  font-size: 1.3em;
+}
+@media screen and (max-width: 365px) {
+  .home .typed {
+    top: 63%;
+    left: 17%;
+  }
+}
+@media screen and (min-width: 375px) {
+  .home .typed {
+    top: 61%;
+    left: 20%;
+  }
+}
+@media screen and (min-width: 410px) {
+  .home .typed {
+    top: 64%;
+    left: 23%;
+  }
+}
+@media screen and (min-width: 414px) {
+  .home .typed {
+    top: 59%;
+    left: 23%;
+  }
+}
+@media screen and (min-width: 768px) {
+  .home .typed {
+    top: 34%;
+  }
+  .home .typed h2 {
+    font-size: 1.953em;
+  }
+}
+@media screen and (min-width: 780px) {
+  .home .typed {
+    top: 54%;
+  }
+  .home .typed h2 {
+    font-size: 2.441em;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .home .typed {
+    top: 34%;
+  }
+  .home .typed h2 {
+    font-size: 2.441em;
+  }
+}
+@media screen and (min-width: 1028px) {
+  .home .typed {
+    top: 54%;
+  }
+}
+
+/** Stories Page Gallery */
+.stories-gallery {
+  margin: 0 auto;
+}
+
+.stories {
+  padding: 0;
+  list-style: none;
+}
+.stories figure {
+  position: relative;
+  float: left;
+  overflow: hidden;
+  margin: 10px 1%;
+  min-width: 320px;
+  max-width: 530px;
+  max-height: 397px;
+  height: auto;
+  background: #3085a3;
+  text-align: center;
+  cursor: pointer;
+}
+.stories figure img {
+  position: relative;
+  display: block;
+  opacity: 0.8;
+}
+.stories figure figcaption {
+  color: #fff;
+  padding: 1.5em;
+  font-size: 1em;
+  line-height: 125%;
+  backface-visibility: hidden;
+}
+.stories figure figcaption::before, .stories figure figcaption::after {
+  pointer-events: none;
+}
+.stories figure h2 {
+  margin: 0;
+  line-height: 125%;
+  font-size: 25px;
+  font-weight: 800;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+.stories figure p {
+  margin: 0;
+  padding: 0 1em 0.5em 1em;
+  letter-spacing: 1px;
+  font-size: 78.5%;
+}
+
+.stories figure figcaption,
+.stories figure figcaption > a {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/** Story Effect **/
+figure.effect-story {
+  background: #030c17;
+}
+figure.effect-story img {
+  opacity: 0.9;
+  transition: opacity 0.35s;
+}
+figure.effect-story h2 {
+  margin: 8% 0 10px 0;
+  transition: transform 0.35s;
+}
+figure.effect-story p {
+  padding: 1em;
+  opacity: 0;
+  transition: opacity 0.35s, transform 0.35s;
+  transform: scale(1.5);
+}
+figure.effect-story:hover h2 {
+  transform: scale(0.9);
+}
+figure.effect-story figcaption p {
+  font-family: "Raleway", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
+}
+figure.effect-story figcaption::before {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+  bottom: 30px;
+  left: 30px;
+  border: 2px solid #fff;
+  box-shadow: 0 0 0 30px rgba(255, 255, 255, 0.2);
+  content: '';
+  opacity: 0;
+  transition: opacity 0.35s, transform 0.35s;
+  transform: scale3d(1.4, 1.4, 1);
+}
+
+figure.effect-story:hover figcaption::before,
+figure.effect-story:hover p {
+  opacity: 1;
+  transform: scale3d(1, 1, 1);
+}
+
+figure.effect-story:hover figcaption {
+  background-color: rgba(58, 52, 42, 0);
+}
+
+figure.effect-story:hover img {
+  opacity: 0.4;
+}
+
+@media screen and (min-width: 768px) {
+  .stories-gallery {
+    margin: 0 auto;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  .stories-gallery .stories figure img {
+    width: 470px;
+    height: 360px;
+  }
+}
 /* @import "layout/flex"; */
