--- a/style-human.css
+++ b/style-human.css
@@ -1095,14 +1095,20 @@ object {
   display: block;
 }
 
-/** Temporary Home page adjustment **/
-.home .entry-title, .site-footer {
+.home .entry-title {
   display: none;
 }
 
 .home #content {
   padding: 0;
   margin: 0;
+}
+
+.home #secondary {
+  margin-top: -24px;
+}
+.home #secondary h2 {
+  margin-bottom: 10px;
 }
 
 /** Homepage Text Display with Typed.js **/
