--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -2,21 +2,18 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-	border: 1px solid;
-	border-color: $color__border-button;
-	border-radius: 3px;
-	background: $color__background-button;
-	color: rgba(0, 0, 0, .8);
-	@include font-size(0.75);
-	line-height: 1;
-	padding: .6em 1em .4em;
+	font-family: $font-sans;
+	padding: .5em 1.4em;
+	font-size: 85%;
+	color: #000;
+	line-height: 1.3em;
+	text-decoration: none;
+	border: 1px solid #c3c3c3;
 
-	&:hover {
-		border-color: $color__border-button-hover;
-	}
-
-	&:active,
+	&:hover,
 	&:focus {
-		border-color: $color__border-button-focus;
+		color: #fff;
+		background: $color__link;
+		border-color: $color__link;
 	}
 }
