--- a/style-human.css
+++ b/style-human.css
@@ -476,30 +476,24 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-  border: 1px solid;
-  border-color: #ccc #ccc #bbb;
-  border-radius: 3px;
-  background: #e6e6e6;
-  color: rgba(0, 0, 0, 0.8);
-  font-size: 12px;
-  font-size: 0.75rem;
-  line-height: 1;
-  padding: .6em 1em .4em;
+  font-family: "Raleway", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
+  padding: .5em 1.4em;
+  font-size: 85%;
+  color: #000;
+  line-height: 1.3em;
+  text-decoration: none;
+  border: 1px solid #c3c3c3;
 }
-button:hover,
+button:hover, button:focus,
 input[type="button"]:hover,
-input[type="reset"]:hover,
-input[type="submit"]:hover {
-  border-color: #ccc #bbb #aaa;
-}
-button:active, button:focus,
-input[type="button"]:active,
 input[type="button"]:focus,
-input[type="reset"]:active,
+input[type="reset"]:hover,
 input[type="reset"]:focus,
-input[type="submit"]:active,
+input[type="submit"]:hover,
 input[type="submit"]:focus {
-  border-color: #aaa #bbb #bbb;
+  color: #fff;
+  background: #873131;
+  border-color: #873131;
 }
 
 input[type="text"],
