--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -65,3 +65,26 @@
 	clear: both;
 	margin: 0 0 1.5em;
 }
+
+.full-bleed {
+	width: 100vw;
+	max-height: 1200px;
+	max-width: 700px;
+	margin-top: 1em;
+	margin-left: -1em;
+	overflow: hidden;
+
+	@media screen and (min-width: $query__small) {
+		margin-top: -2em;
+	}
+
+	@media screen and (min-width: $query__small) {
+		margin-top: 1.5em;
+		margin-right: -2em;
+	}
+
+	@media screen and (min-width: $size__max-width) {
+		margin-right: calc( ((-100vw + #($size__max-width))/2) - 2em);
+		margin-left: calc( ((-100vw + #($size__max-width))/2) - 2em);
+	}
+}
