--- a/style-human.css
+++ b/style-human.css
@@ -889,6 +889,32 @@ Header Menu
   margin: 0 0 1.5em;
 }
 
+.full-bleed {
+  width: 100vw;
+  max-height: 1200px;
+  max-width: 700px;
+  margin-top: 1em;
+  margin-left: -1em;
+  overflow: hidden;
+}
+@media screen and (min-width: 768px) {
+  .full-bleed {
+    margin-top: -2em;
+  }
+}
+@media screen and (min-width: 768px) {
+  .full-bleed {
+    margin-top: 1.5em;
+    margin-right: -2em;
+  }
+}
+@media screen and (min-width: 1080px) {
+  .full-bleed {
+    margin-right: calc( ((-100vw + #($size__max-width))/2) - 2em);
+    margin-left: calc( ((-100vw + #($size__max-width))/2) - 2em);
+  }
+}
+
 /*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
@@ -1110,7 +1136,6 @@ Header Menu
 }
 #story article img {
   float: left;
-  margin-top: -30px;
   padding-bottom: 1.7em;
   max-width: 100%;
   height: auto;
@@ -1125,10 +1150,10 @@ Header Menu
   margin-bottom: 0.488em;
   padding: 0;
 }
-#story article p + p.intro {
+#story article p.intro {
   text-indent: 0;
 }
-#story article p + p.first {
+#story article p.first {
   text-indent: 0;
   margin-top: 4em;
 }
