--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -69,17 +69,10 @@
 .full-bleed {
 	width: 100vw;
 	max-height: 1200px;
-	max-width: 700px;
-	margin-top: 1em;
 	margin-left: -1em;
 	overflow: hidden;
 
-	@media screen and (min-width: $query__small) {
-		margin-top: -2em;
-	}
-
-	@media screen and (min-width: $query__small) {
-		margin-top: 1.5em;
+	@media screen and (min-width: $query__medium) {
 		margin-right: -2em;
 	}
 
