--- a/sass/site/primary/_stories.scss
+++ b/sass/site/primary/_stories.scss
@@ -38,10 +38,14 @@
 		}
 	}
 
+
 	@media screen and (min-width: $query__small) {
+		.full-bleed {
+			max-width: 700px;
+			padding-bottom: 1.4em;
+		}
 		img {
 			width: 100%;
-			padding-bottom: 1.4em;
 		}
 		
 	}
