--- a/sass/site/primary/_stories.scss
+++ b/sass/site/primary/_stories.scss
@@ -6,6 +6,7 @@
 			font-size: 3.3125em;
     		font-weight: 700;
     		padding-bottom: 18px;
+    		margin-left: 1em;
 		}
 		h2 {
             font-size: 2.25em;
@@ -25,9 +26,8 @@
 			line-height: 150%;
             font-feature-settings: "liga" 1, "onum" 1, "smcp" 1;
             text-indent: 1.5em;
-            margin-top: 0;
-           	margin-bottom: 0.488em;
-           	padding: 0;
+            margin: 0 0 0.488em 1em;
+           	padding: 0 1em 0 0;
             &.intro {
             	text-indent: 0;
             }
@@ -40,13 +40,21 @@
 
 
 	@media screen and (min-width: $query__small) {
-		.full-bleed {
-			max-width: 700px;
-			padding-bottom: 1.4em;
-		}
-		img {
-			width: 100%;
-		}
-		
+		article {
+			h1 {
+				margin-left: 0;
+			}
+			p {
+				margin-left: 0;
+				padding: 0;
+			}
+			.full-bleed {
+				max-width: 700px;
+				// padding-bottom: 1.4em;
+			}
+			img {
+				width: 100%;
+			}
+		}	
 	}
 }
