--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -69,13 +69,22 @@
 .full-bleed {
 	width: 100vw;
 	max-height: 1200px;
+	margin-left: -1em;
 	overflow: hidden;
 
-	@media screen and (min-width: $query__medium) {
+	@media screen and (min-width: $query__small) {
+	}
+
+	@media screen and (min-width: $query__small) {
+		margin-right: -2em;
 	}
 
 	@media screen and (min-width: $size__max-width) {
 		margin-right: calc( ((-100vw + #($size__max-width))/2) - 2em);
 		margin-left: calc( ((-100vw + #($size__max-width))/2) - 2em);
+	}
+	img {
+		display: block;
+		margin: 0 auto;
 	}
 }
