--- a/sass/site/primary/_stories.scss
+++ b/sass/site/primary/_stories.scss
@@ -15,10 +15,10 @@
 
         }
 		img {
-			float: left;
+			// float: left;
 			padding-bottom: 1.7em;
-        	max-width: 100%;
-        	height: auto;
+        	// max-width: 100%;
+        	max-height: 466px;
 		}
 		p {
 			max-width: 705px;
