--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -69,7 +69,7 @@
 .full-bleed {
 	width: 100vw;
 	max-height: 1200px;
-	margin-left: -1em;
+	// margin-left: -1em;
 	overflow: hidden;
 
 	@media screen and (min-width: $query__small) {
