--- a/sass/site/secondary/_widgets.scss
+++ b/sass/site/secondary/_widgets.scss
@@ -1,8 +1,52 @@
+.widget-area {
+	margin-top: 1.5em;
+}
+
 .widget {
-	margin: 0 0 1.5em;
+	margin: 0 0 2em;
+	padding: 0 2em;
+	font-family: $font-sans;
+
+	ul,
+	ol {
+		padding: .7em 0 0;
+		margin-bottom: 0;
+		list-style-type: none;
+
+		li {
+			display: block;
+			line-height: 2em;
+
+			ul,
+			ol {
+				margin-left: .5em;
+
+				@media screen and (min-width: 30em) {
+					margin-left: 1em;
+				}
+			}
+
+		}
+	}
+
+	a {
+		font-weight: 600;
+		text-decoration: none;
+	}
 
 	/* Make sure select elements fit in widgets. */
 	select {
-		max-width: 100%;
+		width: 100%;
+		height: 2.5em;
+		padding: 10px;
+		font-family: $font-sans;
+		border: 1px solid #ccc;
 	}
+
+}
+
+.widget-title {
+	margin-top: 0;
+	margin-bottom: .5em;
+	font-size: 1.4em;
 }
