--- a/sass/media/_galleries.scss
+++ b/sass/media/_galleries.scss
@@ -116,7 +116,6 @@
         img {
             position: relative;
             display: block;
-            // max-width: 100%;
             opacity: 0.8;
         }
         figcaption {
@@ -153,6 +152,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    z-index: 1000; // Make sure link is available for touch 
 }
 
 /** Story Effect **/
@@ -160,24 +160,19 @@ figure.effect-story {
     background: #030c17;
     img {
         opacity: 0.9;
-        -webkit-transition: opacity 0.35s;
         transition: opacity 0.35s;
     }
     h2 {
         margin: 8% 0 10px 0;
-        -webkit-transition: -webkit-transform 0.35s;
         transition: transform 0.35s;
     }
     p {
         padding: 1em;
         opacity: 0;
-        -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
         transition: opacity 0.35s, transform 0.35s;
-        -webkit-transform: scale(1.5);
         transform: scale(1.5);
     }
     &:hover h2 {
-        -webkit-transform: scale(0.9);
         transform: scale(0.9);
     }
     figcaption {
@@ -194,9 +189,7 @@ figure.effect-story {
             box-shadow: 0 0 0 30px rgba(255, 255, 255, 0.2);
             content: '';
             opacity: 0;
-            -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
             transition: opacity 0.35s, transform 0.35s;
-            -webkit-transform: scale3d(1.4, 1.4, 1);
             transform: scale3d(1.4, 1.4, 1);
         }
     }
@@ -205,7 +198,6 @@ figure.effect-story {
 figure.effect-story:hover figcaption::before,
 figure.effect-story:hover p {
     opacity: 1;
-    -webkit-transform: scale3d(1, 1, 1);
     transform: scale3d(1, 1, 1);
 }
 
