change font variable names to match others; also adjusted dropcap style declarations.

--- a/sass/media/_captions.scss
+++ b/sass/media/_captions.scss
@@ -1,7 +1,7 @@
 .wp-caption {
 	margin-bottom: 1.5em;
 	max-width: 100%;
-	font-family: $font-sans;
+	font-family: $font__sans;
 	font-size: 90%;
 
 	img[class*="wp-image-"] {
