--- a/sass/media/_galleries.scss
+++ b/sass/media/_galleries.scss
@@ -177,7 +177,7 @@ figure.effect-story {
     }
     figcaption {
         p {
-            font-family: $font-sans;
+            font-family: $font__sans;
         }
         &::before {
             position: absolute;
