--- a/sass/site/header/_header.scss
+++ b/sass/site/header/_header.scss
@@ -7,7 +7,7 @@
 .site-header {
 	position: relative;
 	padding: 1em;
-	font-family: $font-sans;
+	font-family: $font__sans;
 	color: #fff;
 	background-color: $color__skin;
 
