--- a/sass/forms/_buttons.scss
+++ b/sass/forms/_buttons.scss
@@ -2,7 +2,7 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-	font-family: $font-sans;
+	font-family: $font__sans;
 	padding: .5em 1.4em;
 	font-size: 85%;
 	color: #000;
