--- a/sass/typography/_copy.scss
+++ b/sass/typography/_copy.scss
@@ -67,10 +67,19 @@ big {
 }
 
 .dropcap {
+    font-size: 400%;
     float: left;
+    margin-top: -2px;
+    margin-right: 3px;
+    line-height: .75em;
+}
+
+#story .dropcap {
+	float: left;
     font-size: 400%;
     margin-top: 20px;
     margin-right: 3px;
+    line-height: .25em;
 }
 
 .smallcaps {
