change to story graph indent, other misc.

--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -1131,7 +1131,7 @@ Header Menu
   font-size: 1.357em;
   line-height: 150%;
   font-feature-settings: "liga" 1, "onum" 1, "smcp" 1;
-  text-indent: 1.5em;
+  text-indent: 1em;
   margin: 0 0 0.488em 1em;
   padding: 0 1em 0 0;
 }
@@ -1268,6 +1268,14 @@ object {
   display: inline-block;
 }
 
+@media screen and (max-width: 700px) {
+  img#portrait {
+    display: block;
+    float: none;
+    margin-left: 0;
+    padding-bottom: 2em;
+  }
+}
 /*--------------------------------------------------------------
 ## Captions
 --------------------------------------------------------------*/
