--- a/sass/media/_media.scss
+++ b/sass/media/_media.scss
@@ -19,6 +19,16 @@ object {
 	display: inline-block;
 }
 
+@media screen and (max-width: 700px) {
+	img#portrait {
+		display: block;
+		float: none;
+		margin-left: 0;
+		padding-bottom: 2em;
+	}	
+}
+
+
 /*--------------------------------------------------------------
 ## Captions
 --------------------------------------------------------------*/
