styled abbr element with letter-spaced small caps

--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -397,7 +397,7 @@ big {
   line-height: .25em;
 }
 
-.smallcaps {
+abbr, .smallcaps {
   font-variant: small-caps;
   letter-spacing: 0.075em;
   font-weight: 600;
