--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -1187,20 +1187,21 @@ Header Menu
 }
 .widget ul,
 .widget ol {
-  padding: .7em 0 0;
+  padding: 0.7em 0 0;
   margin-bottom: 0;
   list-style-type: none;
 }
 .widget ul li,
 .widget ol li {
   display: block;
-  line-height: 2em;
+  line-height: 1.5em;
+  padding-bottom: 0.75em;
 }
 .widget ul li ul,
 .widget ul li ol,
 .widget ol li ul,
 .widget ol li ol {
-  margin-left: .5em;
+  margin-left: 0.5em;
 }
 @media screen and (min-width: 30em) {
   .widget ul li ul,
@@ -1224,8 +1225,23 @@ Header Menu
 
 .widget-title {
   margin-top: 0;
-  margin-bottom: .5em;
+  margin-bottom: .3em;
   font-size: 1.4em;
+}
+
+.widget ul {
+  padding: 0;
+}
+.widget ul li {
+  text-indent: -1.9em;
+  padding-left: 1.9em;
+}
+.widget ul li:before {
+  font-family: FontAwesome;
+  content: '\f036';
+  vertical-align: middle;
+  color: #737373;
+  padding-right: 3px;
 }
 
 /*--------------------------------------------------------------
@@ -1268,12 +1284,16 @@ object {
   display: inline-block;
 }
 
+img#portrait {
+  border-radius: 10px;
+}
+
 @media screen and (max-width: 700px) {
   img#portrait {
     display: block;
     float: none;
     margin-left: 0;
-    padding-bottom: 2em;
+    margin-bottom: 2em;
   }
 }
 /*--------------------------------------------------------------
