--- a/sass/media/_media.scss
+++ b/sass/media/_media.scss
@@ -19,12 +19,16 @@ object {
 	display: inline-block;
 }
 
+img#portrait {
+	border-radius: 10px;
+}
+
 @media screen and (max-width: 700px) {
 	img#portrait {
 		display: block;
 		float: none;
 		margin-left: 0;
-		padding-bottom: 2em;
+		margin-bottom: 2em;
 	}	
 }
 
