--- a/sass/site/secondary/_widgets.scss
+++ b/sass/site/secondary/_widgets.scss
@@ -58,6 +58,12 @@
 		text-indent: -1.9em;
 		padding-left: 1.9em;
 		
-		@include paragraph-icon;
+		&:before {
+	        font-family: $font__icons;
+	        content: '\f036'; // left paragraph icon
+	        vertical-align: middle;
+	        color: lighten($color__text-main, 20%);
+	        padding-right: 3px;
+    	}
 	}
 }
