added paragraph icons to read more links on blog posts.

--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -51,6 +51,13 @@
 
 }
 
+.read-more {
+	@include paragraph-icon;
+	&:before {
+		vertical-align: top;
+	}
+}
+
 .updated:not(.published) {
 	display: none;
 }
