adjusted top margin of entry-content

--- a/style-human.css
+++ b/style-human.css
@@ -890,6 +890,10 @@ Header Menu
   border-bottom: 2px solid #873131;
 }
 
+.post .entry-content {
+  margin: 0;
+}
+
 .cat-links a {
   color: #404040;
   text-decoration: none;
