moved up readmore link for blog index

--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -898,6 +898,10 @@ Header Menu
   border-bottom: 1px solid #873131;
 }
 
+.blog .entry-content > p {
+  margin-bottom: 1em;
+}
+
 .read-more:before {
   font-family: FontAwesome;
   content: '\f036';
