--- a/sass/site/header/_header-menu.scss
+++ b/sass/site/header/_header-menu.scss
@@ -31,6 +31,10 @@
 					background: hsl(0, 0%, 25%);
 				}
 			}
+			&.current-menu-item {
+				padding-top: 2px;
+				border-bottom: 2px solid $color__link;
+			}
 
 		}
 	}
