--- a/compiled/style-human.css
+++ b/compiled/style-human.css
@@ -810,8 +810,7 @@ Header Menu
   background: #404040;
 }
 #site-navigation ul li.current-menu-item {
-  padding-top: 2px;
-  border-bottom: 2px solid #873131;
+  border-left: 2px solid #FFF;
 }
 
 #social-navigation {
@@ -838,6 +837,11 @@ Header Menu
     display: flex;
     flex-flow: nowrap row;
     justify-content: space-between;
+  }
+  #site-navigation ul li.current-menu-item {
+    padding-top: 2px;
+    border-bottom: 2px solid #FFF;
+    border-left: none;
   }
   #site-navigation ul li a {
     max-width: none;
