added text-rendering optimizeLegibility to all typo

--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -9,6 +9,7 @@ textarea {
 	@include font-size(0.9);
 	line-height: $font__line-height-body;
 	font-variant-numeric: oldstyle-nums;
+	text-rendering: optimizeLegibility;
 	
 	// Rules that apply to phones and everything larger require no queries.
 
